src/Linear/Generated/LinearParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/Shared/gabura/git/Linear/scripts/../spec/LinearParser.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class LinearParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		LAMBDA=1, EXEC_VALUE=2, EXEC_DISCARD=3, EXEC_CALL=4, EXEC_SETLENGTH=5, 
		EXEC_OUTPUT=6, EXEC_LENGTH=7, EXEC_ABSOLUTE_INDEX=8, EXEC_INDEX=9, EXEC_PARENT=10, 
		EXEC_UNIQUE=11, EXEC_REPLACE=12, WhiteSpaces=13, DocComment=14, Comment=15, 
		BlockComment=16, LINK_ARRAY=17, RANGE=18, COLON=19, TRUE=20, FALSE=21, 
		OPENPA=22, CLOSEPA=23, OPEN=24, CLOSE=25, OPENSQ=26, CLOSESQ=27, ENDL=28, 
		COMMA=29, DESERIALIZE=30, DOT=31, IDENTIFIER=32, WS=33, RSHIFT=34, URSHIFT=35, 
		LSHIFT=36, PLUS=37, MINUS=38, STAR=39, DIV=40, PERCENT=41, AMP=42, BITWISE_OR=43, 
		CARET=44, BANG=45, TILDE=46, ASSIGNMENT=47, LT=48, GT=49, INTERR=50, OP_AND=51, 
		OP_OR=52, OP_EQ=53, OP_NE=54, OP_LE=55, OP_GE=56, INTEGER_LITERAL=57, 
		HEX_INTEGER_LITERAL=58, REAL_LITERAL=59, CHARACTER_LITERAL=60, REGULAR_STRING=61, 
		VERBATIM_STRING=62;
	public const int
		RULE_compilation_unit = 0, RULE_body_element = 1, RULE_struct = 2, RULE_struct_statement = 3, 
		RULE_struct_statement_define = 4, RULE_struct_statement_define_lambda = 5, 
		RULE_struct_statement_discard = 6, RULE_struct_statement_call = 7, RULE_struct_statement_length = 8, 
		RULE_struct_statement_define_array = 9, RULE_struct_statement_define_array_indirect = 10, 
		RULE_struct_statement_output = 11, RULE_property_group = 12, RULE_property_statement = 13, 
		RULE_term_replacement_length = 14, RULE_term_replacement_a = 15, RULE_term_replacement_i = 16, 
		RULE_term_replacement_p = 17, RULE_term_replacement_u = 18, RULE_term_literal_true = 19, 
		RULE_term_literal_false = 20, RULE_expr = 21, RULE_un_op = 22, RULE_op_mul_div = 23, 
		RULE_op_add_sub = 24, RULE_op_shift = 25, RULE_op_rel = 26, RULE_op_eq = 27, 
		RULE_op_cond_and = 28, RULE_op_cond_or = 29, RULE_bool_op = 30, RULE_struct_size = 31, 
		RULE_term = 32;
	public static readonly string[] ruleNames = {
		"compilation_unit", "body_element", "struct", "struct_statement", "struct_statement_define", 
		"struct_statement_define_lambda", "struct_statement_discard", "struct_statement_call", 
		"struct_statement_length", "struct_statement_define_array", "struct_statement_define_array_indirect", 
		"struct_statement_output", "property_group", "property_statement", "term_replacement_length", 
		"term_replacement_a", "term_replacement_i", "term_replacement_p", "term_replacement_u", 
		"term_literal_true", "term_literal_false", "expr", "un_op", "op_mul_div", 
		"op_add_sub", "op_shift", "op_rel", "op_eq", "op_cond_and", "op_cond_or", 
		"bool_op", "struct_size", "term"
	};

	private static readonly string[] _LiteralNames = {
		null, "'lambda'", "'$value'", "'$discard'", "'$call'", "'$setlength'", 
		"'$output'", "'$length'", "'$a'", "'$i'", null, null, "'$$'", null, null, 
		null, null, "'->'", "'..'", "':'", "'true'", "'false'", "'('", "')'", 
		"'{'", "'}'", "'['", "']'", "';'", "','", "'`'", "'.'", null, null, "'>>'", 
		"'>>>'", "'<<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", 
		"'!'", "'~'", "'='", "'<'", "'>'", "'?'", "'&&'", "'||'", "'=='", "'!='", 
		"'<='", "'>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "LAMBDA", "EXEC_VALUE", "EXEC_DISCARD", "EXEC_CALL", "EXEC_SETLENGTH", 
		"EXEC_OUTPUT", "EXEC_LENGTH", "EXEC_ABSOLUTE_INDEX", "EXEC_INDEX", "EXEC_PARENT", 
		"EXEC_UNIQUE", "EXEC_REPLACE", "WhiteSpaces", "DocComment", "Comment", 
		"BlockComment", "LINK_ARRAY", "RANGE", "COLON", "TRUE", "FALSE", "OPENPA", 
		"CLOSEPA", "OPEN", "CLOSE", "OPENSQ", "CLOSESQ", "ENDL", "COMMA", "DESERIALIZE", 
		"DOT", "IDENTIFIER", "WS", "RSHIFT", "URSHIFT", "LSHIFT", "PLUS", "MINUS", 
		"STAR", "DIV", "PERCENT", "AMP", "BITWISE_OR", "CARET", "BANG", "TILDE", 
		"ASSIGNMENT", "LT", "GT", "INTERR", "OP_AND", "OP_OR", "OP_EQ", "OP_NE", 
		"OP_LE", "OP_GE", "INTEGER_LITERAL", "HEX_INTEGER_LITERAL", "REAL_LITERAL", 
		"CHARACTER_LITERAL", "REGULAR_STRING", "VERBATIM_STRING"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LinearParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LinearParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LinearParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LinearParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Compilation_unitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LinearParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Body_elementContext[] body_element() {
			return GetRuleContexts<Body_elementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Body_elementContext body_element(int i) {
			return GetRuleContext<Body_elementContext>(i);
		}
		public Compilation_unitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilation_unit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterCompilation_unit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitCompilation_unit(this);
		}
	}

	[RuleVersion(0)]
	public Compilation_unitContext compilation_unit() {
		Compilation_unitContext _localctx = new Compilation_unitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilation_unit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				State = 66;
				body_element();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 72;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Body_elementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		public Body_elementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_body_element; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterBody_element(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitBody_element(this);
		}
	}

	[RuleVersion(0)]
	public Body_elementContext body_element() {
		Body_elementContext _localctx = new Body_elementContext(Context, State);
		EnterRule(_localctx, 2, RULE_body_element);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			@struct();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(LinearParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN() { return GetToken(LinearParser.OPEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE() { return GetToken(LinearParser.CLOSE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Struct_sizeContext struct_size() {
			return GetRuleContext<Struct_sizeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statementContext[] struct_statement() {
			return GetRuleContexts<Struct_statementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statementContext struct_statement(int i) {
			return GetRuleContext<Struct_statementContext>(i);
		}
		public StructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct(this);
		}
	}

	[RuleVersion(0)]
	public StructContext @struct() {
		StructContext _localctx = new StructContext(Context, State);
		EnterRule(_localctx, 4, RULE_struct);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			Match(IDENTIFIER);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INTEGER_LITERAL || _la==HEX_INTEGER_LITERAL) {
				{
				State = 77;
				struct_size();
				}
			}

			State = 80;
			Match(OPEN);
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4294967418L) != 0) {
				{
				{
				State = 81;
				struct_statement();
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 87;
			Match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_defineContext struct_statement_define() {
			return GetRuleContext<Struct_statement_defineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_define_lambdaContext struct_statement_define_lambda() {
			return GetRuleContext<Struct_statement_define_lambdaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_discardContext struct_statement_discard() {
			return GetRuleContext<Struct_statement_discardContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_callContext struct_statement_call() {
			return GetRuleContext<Struct_statement_callContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_lengthContext struct_statement_length() {
			return GetRuleContext<Struct_statement_lengthContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_define_arrayContext struct_statement_define_array() {
			return GetRuleContext<Struct_statement_define_arrayContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_define_array_indirectContext struct_statement_define_array_indirect() {
			return GetRuleContext<Struct_statement_define_array_indirectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Struct_statement_outputContext struct_statement_output() {
			return GetRuleContext<Struct_statement_outputContext>(0);
		}
		public Struct_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement(this);
		}
	}

	[RuleVersion(0)]
	public Struct_statementContext struct_statement() {
		Struct_statementContext _localctx = new Struct_statementContext(Context, State);
		EnterRule(_localctx, 6, RULE_struct_statement);
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 89;
				struct_statement_define();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90;
				struct_statement_define_lambda();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 91;
				struct_statement_discard();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 92;
				struct_statement_call();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 93;
				struct_statement_length();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 94;
				struct_statement_define_array();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 95;
				struct_statement_define_array_indirect();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 96;
				struct_statement_output();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statement_defineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(LinearParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(LinearParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDL() { return GetToken(LinearParser.ENDL, 0); }
		public Struct_statement_defineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement_define; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement_define(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement_define(this);
		}
	}

	[RuleVersion(0)]
	public Struct_statement_defineContext struct_statement_define() {
		Struct_statement_defineContext _localctx = new Struct_statement_defineContext(Context, State);
		EnterRule(_localctx, 8, RULE_struct_statement_define);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(IDENTIFIER);
			State = 100;
			Match(IDENTIFIER);
			State = 101;
			expr(0);
			State = 102;
			Match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statement_define_lambdaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LAMBDA() { return GetToken(LinearParser.LAMBDA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(LinearParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDL() { return GetToken(LinearParser.ENDL, 0); }
		public Struct_statement_define_lambdaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement_define_lambda; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement_define_lambda(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement_define_lambda(this);
		}
	}

	[RuleVersion(0)]
	public Struct_statement_define_lambdaContext struct_statement_define_lambda() {
		Struct_statement_define_lambdaContext _localctx = new Struct_statement_define_lambdaContext(Context, State);
		EnterRule(_localctx, 10, RULE_struct_statement_define_lambda);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(LAMBDA);
			State = 105;
			Match(IDENTIFIER);
			State = 106;
			expr(0);
			State = 107;
			Match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statement_discardContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXEC_DISCARD() { return GetToken(LinearParser.EXEC_DISCARD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDL() { return GetToken(LinearParser.ENDL, 0); }
		public Struct_statement_discardContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement_discard; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement_discard(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement_discard(this);
		}
	}

	[RuleVersion(0)]
	public Struct_statement_discardContext struct_statement_discard() {
		Struct_statement_discardContext _localctx = new Struct_statement_discardContext(Context, State);
		EnterRule(_localctx, 12, RULE_struct_statement_discard);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(EXEC_DISCARD);
			State = 110;
			expr(0);
			State = 111;
			Match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statement_callContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXEC_CALL() { return GetToken(LinearParser.EXEC_CALL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDL() { return GetToken(LinearParser.ENDL, 0); }
		public Struct_statement_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement_call; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement_call(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement_call(this);
		}
	}

	[RuleVersion(0)]
	public Struct_statement_callContext struct_statement_call() {
		Struct_statement_callContext _localctx = new Struct_statement_callContext(Context, State);
		EnterRule(_localctx, 14, RULE_struct_statement_call);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(EXEC_CALL);
			State = 114;
			expr(0);
			State = 115;
			Match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statement_lengthContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXEC_SETLENGTH() { return GetToken(LinearParser.EXEC_SETLENGTH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDL() { return GetToken(LinearParser.ENDL, 0); }
		public Struct_statement_lengthContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement_length; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement_length(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement_length(this);
		}
	}

	[RuleVersion(0)]
	public Struct_statement_lengthContext struct_statement_length() {
		Struct_statement_lengthContext _localctx = new Struct_statement_lengthContext(Context, State);
		EnterRule(_localctx, 16, RULE_struct_statement_length);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(EXEC_SETLENGTH);
			State = 118;
			expr(0);
			State = 119;
			Match(ENDL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Struct_statement_define_arrayContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(LinearParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(LinearParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPENSQ() { return GetToken(LinearParser.OPENSQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSESQ() { return GetToken(LinearParser.CLOSESQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDL() { return GetToken(LinearParser.ENDL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Property_groupContext property_group() {
			return GetRuleContext<Property_groupContext>(0);
		}
		public Struct_statement_define_arrayContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct_statement_define_array; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.EnterStruct_statement_define_array(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILinearParserListener typedListener = listener as ILinearParserListener;
			if (typedListener != null) typedListener.ExitStruct_statement_define_array(this);
		}
	}
